--- a/src/app.html
+++ b/src/app.html
@@ -1,38 +1,13 @@
 <template>
-    <require from="kube/css/kube.css"></require>
-    <require from="./styles.css"></require>
-    <require from="./components/contact-list"></require>
+    <require from="font-awesome/font-awesome.css"></require>
+    <require from="./app.css"></require>
 
-    <require from="./components/layout/header"></require>
-    <require from="./components/layout/footer"></require>
+    <require from="./components/layout/header/header"></require>
+    <require from="./components/layout/footer/footer"></require>
+    <require from="./components/layout/main/main"></require>
 
     <header></header>
-
-    <main>
-        <sidebar></sidebar>
-
-        <div class="row">
-                <div class="col col-6">
-                    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-                        <div class="navbar-header">
-                            <a class="navbar-brand" href="#">
-                                <i class="fa fa-user"></i>
-                                <span>Contacts</span>
-                            </a>
-                        </div>
-                    </nav>
-                </div>
-                <div class="col col-6">
-                    <div class="container">
-                        <div class="row">
-                            <contact-list class="col-md-4"></contact-list>
-                            <router-view class="col-md-8"></router-view>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    </main>
-
+    <main class=" ${sidebarShown? 'sidebar-visible' : 'sidebar-hidden'} "></main>
     <footer></footer>
 
     <loading-indicator loading.bind="router.isNavigating || api.isRequesting"></loading-indicator>
