Sidebar open/close improvements

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
     <require from="./components/layout/main/main"></require>
 
     <header></header>
-    <main class=" ${sidebarShown? 'sidebar-visible' : 'sidebar-hidden'} "></main>
+    <main></main>
     <footer></footer>
 
     <loading-indicator loading.bind="router.isNavigating || api.isRequesting"></loading-indicator>
