--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body aurelia-app="main">
+<body aurelia-app="main" id="aurelia-playground-app" class="sidebar-visible">
     <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
 </body>
 
