Refactor and cleanuo

--- a/src/app.html
+++ b/src/app.html
@@ -2,9 +2,9 @@
     <require from="font-awesome/font-awesome.css"></require>
     <require from="./app.css"></require>
 
-    <require from="./components/layout/tdap-header/tdap-header"></require>
-    <require from="./components/layout/tdap-footer/tdap-footer"></require>
-    <require from="./components/layout/tdap-main/tdap-main"></require>
+    <require from="app/components/layout/tdap-header/tdap-header"></require>
+    <require from="app/components/layout/tdap-footer/tdap-footer"></require>
+    <require from="app/components/layout/tdap-main/tdap-main"></require>
 
     <tdap-header></tdap-header>
     <tdap-main></tdap-main>
